Updated to fix possible contrast error

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -248,7 +248,7 @@ section {
 
 .contact-info h3 {
     font-family: var(--heading-font);
-    color: var(--primary-color);
+    color: var(--accent2-color);
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
@@ -390,8 +390,9 @@ section {
 }
 
 .contact-form button:hover {
-    background-color: var(--accent1-color);
+    background-color: var(--white);
     color: var(--shadow-dark);
+    border: solid 1px var(--secondary-color)
 }
 
 /* Employees Section */
